--- a/.travis.yml
+++ b/.travis.yml
@@ -6,20 +6,40 @@ python:
   - "3.4"
   - "3.5"
 
+matrix:
+  include:
+    - python: "2.7"
+      env: JYTHON=true
+
 cache:
   directories:
     - $HOME/.cache/pip
     - $HOME/virtualenv/python$TRAVIS_PYTHON_VERSION/lib/python$TRAVIS_PYTHON_VERSION/site-packages
     - $HOME/virtualenv/python$TRAVIS_PYTHON_VERSION/bin
 
+before_install:
+  - export JYTHON_URL='http://search.maven.org/remotecontent?filepath=org/python/jython-installer/2.7.1b3/jython-installer-2.7.1b3.jar'
+  - if [ "$JYTHON" == "true" ]; then
+      wget $JYTHON_URL -O jython_installer.jar;
+      java -jar jython_installer.jar -s -d $HOME/jython;
+      export PATH=$HOME/jython/bin:$PATH;
+      $HOME/jython/bin/easy_install nose;
+    fi
+
 install:
   - env
   - pip install -r requirements/test.txt
   - pip install coveralls
   - python setup.py bdist_egg
-  
-# command to run tests
-script: nosetests
+
+before_script:
+  - if [ "$JYTHON" == "true" ]; then
+      export NOSETESTS=$HOME/jython/bin/nosetests;
+    else
+      export NOSETESTS=nosetests;
+    fi
+
+script: $NOSETESTS
 
 after_success:
     - coveralls
