Expand the amount of memory Jython is allowed to use on Travis
The default -Xmx setting is a little low and we may bump into it
during some of the tests. 1 gigabyte should be enough.

--- a/.travis.yml
+++ b/.travis.yml
@@ -75,6 +75,7 @@ install:
 
 before_script:
   - if [ "$JYTHON" == "true" ]; then
+      export JAVA_MEM=-Xmx1g
       export NOSETESTS=$HOME/jython/bin/nosetests;
     else
       export NOSETESTS=nosetests;
