--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ cache:
     - $HOME/virtualenv/python$TRAVIS_PYTHON_VERSION/lib/python$TRAVIS_PYTHON_VERSION/site-packages
     - $HOME/virtualenv/python$TRAVIS_PYTHON_VERSION/bin
     - $HOME/jython_deps
+    - $HOME/jython
 
 before_install:
   - export JYTHON_URL='http://search.maven.org/remotecontent?filepath=org/python/jython-installer/2.7.1b3/jython-installer-2.7.1b3.jar'
@@ -30,10 +31,13 @@ before_install:
   - export REQUIRED_JARS="org.eclipse.dawnsci.nexus_1.0.0.v20161115-1503.jar:$REQUIRED_JARS"
   - if [ "$JYTHON" == "true" ]; then
       jdk_switcher use oraclejdk8;
-      wget $JYTHON_URL -O jython_installer.jar;
-      java -jar jython_installer.jar -s -d $HOME/jython;
+      if [ ! -f "$HOME/jython/.cache" ]; then
+        wget $JYTHON_URL -O jython_installer.jar;
+        java -jar jython_installer.jar -s -d $HOME/jython;
+        $HOME/jython/bin/easy_install nose;
+        touch $HOME/jython/.cache;
+      fi;
       export PATH=$HOME/jython/bin:$PATH;
-      $HOME/jython/bin/easy_install nose;
       if [ ! -f "$HOME/jython_deps/.cache" ]; then
         export DAWN_URL='http://opengda.org/DawnDiamond/2.3/downloads/builds-release/DawnDiamond-2.3.1.v20161216-0929-linux64.zip';
         wget $DAWN_URL -O $HOME/dawn.zip;
