Change travis.yml to not pip install coveralls for Jython
The latest version of coveralls does not appear to install under
Jython. Since we use the real Python install for coveralls anyway,
we don't need to install it under Jython.

--- a/.travis.yml
+++ b/.travis.yml
@@ -62,7 +62,6 @@ before_install:
 install:
   - env
   - pip install -r requirements/test.txt
-  - pip install coveralls
   - pip install mock
   - python setup.py bdist_egg
   - if [ "$JYTHON" == "true" ]; then
@@ -77,6 +76,8 @@ install:
       unset IFS;
       echo "CLASSPATH:";
       echo "$CLASSPATH";
+    else
+      pip install coveralls;
     fi
 
 before_script:
