--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,9 @@ before_install:
   - export REQUIRED_JARS="org.apache.commons.math3_3.6.1.jar:$REQUIRED_JARS"
   - export REQUIRED_JARS="slf4j.api_1.7.25.jar:$REQUIRED_JARS"
   - export REQUIRED_JARS="uk.ac.diamond.jama_1.0.3.jar:$REQUIRED_JARS"
-  - export REQUIRED_JARS="org.eclipse.dawnsci.analysis.api_1.1.0.v20180518-1519.jar:$REQUIRED_JARS"
-  - export REQUIRED_JARS="org.eclipse.dawnsci.nexus_1.0.0.v20180429-1749.jar:$REQUIRED_JARS"
+  - export REQUIRED_JARS="org.eclipse.dawnsci.analysis.api_1.2.0.v20191029-1012.jar:$REQUIRED_JARS"
+  - export REQUIRED_JARS="org.eclipse.dawnsci.nexus_1.1.0.v20191025-1230.jar:$REQUIRED_JARS"
+  - export REQUIRED_JARS="org.eclipse.january_2.3.0.v201909112144.jar:REQUIRED_JARS"
   - if [ "$JYTHON" == "true" ]; then
       jdk_switcher use oraclejdk8;
       if [ ! -f "$HOME/jython/.cache" ]; then
@@ -37,28 +38,22 @@ before_install:
       fi;
       export OLD_PATH=$PATH;
       export PATH=$HOME/jython/bin:$PATH;
-      if [ ! -f "$HOME/jython_deps/.cache" ]; then
-        export DAWN_URL='https://alfred.diamond.ac.uk/DawnDiamond/2.9/downloads/builds-release/DawnDiamond-2.9.0.v20180618-1117-linux64.zip';
-        export JANUARY_URL='https://download.eclipse.org/january/releases/2.3/repository.zip';
-        wget $DAWN_URL -O $HOME/dawn.zip;
-        wget $JANUARY_URL -O $HOME/january.zip;
-        unzip -q $HOME/dawn.zip -d $HOME/dawn;
-        unzip -q $HOME/january.zip -d $HOME/january;
-        export DAWN=$(readlink -f $HOME/dawn/DawnDiamond-2.9.0.v20180618-1117-linux64);
-        cp -r $DAWN/plugins/uk.ac.diamond.scisoft.python_1.4.0/scisoftpy $HOME/jython_deps/numpy;
-        cp -r $DAWN/plugins/uk.ac.diamond.scisoft.python_1.4.0/* $HOME/jython_deps;
-        cp -r $DAWN/plugins/uk.ac.diamond.scisoft.analysis_1.3.0.v20180614-1405/* $HOME/jython_deps;
-        cp -r $DAWN/plugins/org.eclipse.dawnsci.analysis.dataset_1.0.0.v20180306-1203/* $HOME/jython_deps;
-        cp -r $DAWN/plugins/org.dawnsci.boofcv_1.0.0.v20170620-1616/* $HOME/jython_deps;
-        cp -r $DAWN/plugins/hdf.hdf5lib_1.10.2.v20180419-1005/* $HOME/jython_deps;
-        cp -r $DAWN/plugins/org.eclipse.dawnsci.hdf5_1.3.0.v20180504-1031/* $HOME/jython_deps;
-        IFS=":";
-        for j in $REQUIRED_JARS; do
-          cp $DAWN/plugins/$j $HOME/jython_deps/;
-        done;
-        cp $HOME/january/repository/plugins/org.eclipse.january_2.3.0.v201909112144.jar $HOME/jython_deps;
-        touch $HOME/jython_deps/.cache;
-      fi
+      export DAWN_URL='https://alfred.diamond.ac.uk/DawnDiamond/2.16/downloads/builds-release/DawnDiamond-2.16.1.v20191126-1007-linux64.zip';
+      wget $DAWN_URL -O $HOME/dawn.zip;
+      unzip -q $HOME/dawn.zip -d $HOME/dawn;
+      export DAWN=$(readlink -f $HOME/dawn/DawnDiamond-2.9.0.v20180618-1117-linux64);
+      cp -r $DAWN/plugins/uk.ac.diamond.scisoft.python_1.4.0/scisoftpy $HOME/jython_deps/numpy;
+      cp -r $DAWN/plugins/uk.ac.diamond.scisoft.python_1.4.0/* $HOME/jython_deps;
+      cp -r $DAWN/plugins/uk.ac.diamond.scisoft.analysis_1.5.0.v20191118-1501/* $HOME/jython_deps;
+      cp -r $DAWN/plugins/org.eclipse.dawnsci.analysis.dataset_1.1.0.v20191021-1259/* $HOME/jython_deps;
+      cp -r $DAWN/plugins/org.dawnsci.boofcv_1.0.0.v20191014-1522/* $HOME/jython_deps;
+      cp -r $DAWN/plugins/hdf.hdf5lib_1.10.5.v20190918-1220/* $HOME/jython_deps;
+      cp -r $DAWN/plugins/org.eclipse.dawnsci.hdf5_1.5.0.v20191022-1538/* $HOME/jython_deps;
+      IFS=":";
+      for j in $REQUIRED_JARS; do
+        cp $DAWN/plugins/$j $HOME/jython_deps/;
+      done;
+      touch $HOME/jython_deps/.cache;
     fi
 
 install:
@@ -75,7 +70,6 @@ install:
       for j in $REQUIRED_JARS; do
         export CLASSPATH="$CLASSPATH:$HOME/jython_deps/$j";
       done;
-      export CLASSPATH="$CLASSPATH:$HOME/jython_deps/org.eclipse.january_2.3.0.v201909112144.jar";
       unset IFS;
       echo "CLASSPATH:";
       echo "$CLASSPATH";
